[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.1.0"

[build-dependencies]
tonic-build = "*"
